# EcoSim-game

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  README.md  fiche_projet.md  index.html  pitch_ecrit.docx
simulatorV1/python_backend/: .gitignore  README.md  __init__.py  main.py  pyproject.toml  server.py
simulatorV1/python_backend/app/: __init__.py  config.py  main.py  species_store.py  world_config.json  world_loader.py
simulatorV1/python_backend/app/food/: berries.json  fruit_tree.json  herbs.json
simulatorV1/python_backend/app/species/: elephant.json  gazelle.json  hyene.json  lion.json
simulatorV1/python_backend/app/species_catalog/: __init__.py  catalog.json  selection.json  store.py
simulatorV1/python_backend/domain/: __init__.py  animal_components.py  constants.py  food_generation.py  spatial_index.py  species.py  water_generation.py  world.py
simulatorV1/python_backend/infrastructure/: __init__.py
simulatorV1/python_backend/infrastructure/http/: __init__.py  server.py
simulatorV1/python_backend/infrastructure/persistence/: __init__.py  log_writer.py
simulatorV1/python_backend/scripts/: clear_logs.py
simulatorV1/python_backend/simulation/: __init__.py  action_executor.py  animal.py  engine.py  event_log.py  relationships.py  step_context.py
simulatorV1/python_backend/simulation/actions/: __init__.py  grouping.py  predation.py  scavenging.py  territory.py
simulatorV1/python_backend/simulation/ai/: __init__.py  behavior.py  (+2 more)
simulatorV1/python_backend/tests/: benchmark_multi_seed.py  test_pack_ai.py  test_server.py  test_world_loader.py
(+75 files in other folders)
